--- a/administrator/language/en-GB/en-GB.com_audatoria.sys.ini
+++ b/administrator/language/en-GB/en-GB.com_audatoria.sys.ini
@@ -1,11 +1,24 @@
-; System Language File for com_audatoria (Backend) - en-GB.com_audatoria.sys.ini
+; Joomla! System Language File for com_audatoria (Administrator)
+; Copyright (C) 2025 Joel Salazar. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
 
 COM_AUDATORIA="Audatoria"
-COM_AUDATORIA_XML_DESCRIPTION="Component to create and manage interactive multimedia timelines, with import from YouTube and other sources."
-COM_AUDATORIA_MENU_ADMIN="Audatoria" ; Main menu item in admin
+COM_AUDATORIA_XML_DESCRIPTION="Component to create and manage interactive multimedia timelines, with import from YouTube, social media, and other sources. Allows manual item creation and features responsive timeline views."
 
-; Permissions (access.xml) - Ensure these keys match your access.xml
+; Main Admin Menu
+COM_AUDATORIA_MENU_ADMIN="Audatoria Timelines"
+
+; Admin Submenu Items (as defined in audatoria.xml)
+COM_AUDATORIA_SUBMENU_TIMELINES="Timelines"
+COM_AUDATORIA_SUBMENU_ITEMS="Timeline Items"
+COM_AUDATORIA_SUBMENU_CHANNELS="Import Channels"
+COM_AUDATORIA_SUBMENU_DASHBOARD="Dashboard" ; Opcional, si tienes una vista de dashboard
+
+; Permissions (access.xml) - Estas ya las tenías y parecen estar bien. Las incluyo por completitud.
 ; Component Section (already defined by Joomla, JACTION_*)
+; COM_AUDATORIA_ACCESS_ADMIN_LABEL="Configure ACL & Options"
+; COM_AUDATORIA_ACCESS_ADMIN_DESC="Allows users to edit the options and permissions of this component."
 
 ; Timeline Section
 COM_AUDATORIA_ACCESS_CREATE_TIMELINE_LABEL="Create Timelines"
