--- a/administrator/language/es-ES/es-ES.com_audatoria.ini
+++ b/administrator/language/es-ES/es-ES.com_audatoria.ini
@@ -1,41 +1,237 @@
+; Joomla! Archivo de Idioma Principal para com_audatoria (Administrador)
+; Copyright (C) 2025 Joel Salazar. Todos los derechos reservados.
+; Licencia GNU General Public License version 2 o posterior; ver LICENSE.txt
+; Nota: Todos los archivos ini deben guardarse como UTF-8
+
 COM_AUDATORIA="Audatoria"
-COM_AUDATORIA_TIMELINE="Línea de tiempo"
-COM_AUDATORIA_ITEM="Ítem"
-COM_AUDATORIA_CHANNEL="Canal de YouTube"
-COM_AUDATORIA_IMPORT="Importar"
+COM_AUDATORIA_XML_DESCRIPTION="[ES] Component to create and manage interactive multimedia timelines."
+
+; Sidebar Menu
+COM_AUDATORIA_MENU_ADMIN="[ES] Audatoria Timelines"
+COM_AUDATORIA_SUBMENU_TIMELINES="Líneas de Tiempo"
+COM_AUDATORIA_SUBMENU_ITEMS="Ítems de Línea de Tiempo"
+COM_AUDATORIA_SUBMENU_CHANNELS="Canales de Importación"
+COM_AUDATORIA_SUBMENU_DASHBOARD="Panel de Control"
+
+; View and Form Titles
+COM_AUDATORIA_TIMELINES_HEADING="Gestor de Líneas de Tiempo"
+COM_AUDATORIA_TIMELINE_NEW="Nueva Línea de Tiempo"
+COM_AUDATORIA_TIMELINE_EDIT="Editar Línea de Tiempo"
+COM_AUDATORIA_ITEMS_HEADING="Gestor de Ítems de Línea de Tiempo"
+COM_AUDATORIA_ITEM_NEW="Nuevo Ítem"
+COM_AUDATORIA_ITEM_EDIT="Editar Ítem"
+COM_AUDATORIA_CHANNELS_HEADING="Gestor de Canales"
+COM_AUDATORIA_CHANNEL_NEW="Nuevo Canal"
+COM_AUDATORIA_CHANNEL_EDIT="Editar Canal"
+COM_AUDATORIA_CHANNEL_UNTITLED="[ES] Untitled Channel"
+COM_AUDATORIA_DASHBOARD_TITLE="[ES] Audatoria Dashboard"
+COM_AUDATORIA_MAIN_SETTINGS="[ES] Main Settings"
+COM_AUDATORIA_SIDEBAR="[ES] Information"
+
+; Common Fields
 COM_AUDATORIA_FIELD_TITLE="Título"
-COM_AUDATORIA_FIELD_DESCRIPTION="Descripción"
-COM_AUDATORIA_FIELD_START_DATE="Fecha de inicio"
-COM_AUDATORIA_FIELD_END_DATE="Fecha final"
-COM_AUDATORIA_FIELD_MEDIA_TYPE="Tipo de medio"
-COM_AUDATORIA_FIELD_MEDIA_URL="URL del medio"
-COM_AUDATORIA_FIELD_LOCATION_NAME="Ubicación"
-COM_AUDATORIA_FIELD_LAT="Latitud"
-COM_AUDATORIA_FIELD_LNG="Longitud"
-COM_AUDATORIA_FIELD_PUBLISHED="Publicado"
-COM_AUDATORIA_EDIT="Editar"
-COM_AUDATORIA_CHANNELS_IMPORT_VIDEOS="Importar videos"
-COM_AUDATORIA_CHANNELS_HEADING="Canales de YouTube"
-COM_AUDATORIA_CHANNELS_ADD_NEW="Nuevo canal"
-COM_AUDATORIA_CHANNELS_NO_CHANNELS="No hay canales configurados."
-COM_AUDATORIA_TIMELINES_HEADING="Líneas de tiempo"
-COM_AUDATORIA_TIMELINES_ADD_NEW="Nueva línea"
-COM_AUDATORIA_TIMELINES_NO_TIMELINES="No hay líneas creadas aún."
-COM_AUDATORIA_ITEMS_HEADING="Ítems"
-COM_AUDATORIA_ITEMS_ADD_NEW="Nuevo ítem"
-COM_AUDATORIA_ITEMS_NO_ITEMS="No hay ítems registrados."
+COM_AUDATORIA_FIELD_ALIAS_LABEL="Alias"
+COM_AUDATORIA_FIELD_DESCRIPTION_LABEL="Descripción"
+COM_AUDATORIA_FIELD_STATE_LABEL="Estado"
+COM_AUDATORIA_FIELD_ACCESS_LABEL="Acceso"
+COM_AUDATORIA_FIELD_LANGUAGE_LABEL="Idioma"
+COM_AUDATORIA_FIELD_ORDERING_LABEL="Orden"
+COM_AUDATORIA_FIELD_ID_LABEL="ID"
+COM_AUDATORIA_FIELD_CREATED_USER_ID_LABEL="Creado por"
+COM_AUDATORIA_FIELD_CREATED_TIME_LABEL="Fecha de Creación"
+COM_AUDATORIA_FIELD_MODIFIED_USER_ID_LABEL="Modificado por"
+COM_AUDATORIA_FIELD_MODIFIED_TIME_LABEL="Fecha de Modificación"
+COM_AUDATORIA_FIELD_PARAMS_LABEL="Parámetros"
+COM_AUDATORIA_FIELD_PUBLISHED_LABEL="Publicado"
+
+; Timeline Specific Fields & Fieldsets
+COM_AUDATORIA_FIELDSET_BASIC_TIMELINE_LABEL="Detalles de la Línea de Tiempo"
+COM_AUDATORIA_FIELDSET_PUBLISHING_LABEL="Opciones de Publicación"
+COM_AUDATORIA_FIELD_TIMELINE_TITLE_DESC="[ES] The main title of your timeline."
+COM_AUDATORIA_FIELD_TIMELINE_DESCRIPTION_DESC="[ES] A brief description of the timeline."
+
+; Item Specific Fields & Fieldsets
+COM_AUDATORIA_FIELDSET_BASIC_ITEM_LABEL="Detalles del Ítem"
+COM_AUDATORIA_FIELDSET_MEDIA_LABEL="Propiedades Multimedia"
+COM_AUDATORIA_FIELDSET_LOCATION_LABEL="Detalles de Ubicación"
+COM_AUDATORIA_FIELD_TIMELINE_ID_LABEL="Línea de Tiempo Asociada"
+COM_AUDATORIA_FIELD_TIMELINE_ID_DESC="[ES] Select the timeline this item belongs to."
+COM_AUDATORIA_FIELD_ITEM_TITLE_DESC="[ES] The title or headline for this event on the timeline."
+COM_AUDATORIA_FIELD_ITEM_DESCRIPTION_DESC="[ES] The body text for this event. HTML is allowed."
+COM_AUDATORIA_FIELD_START_DATE_LABEL="Fecha de Inicio"
+COM_AUDATORIA_FIELD_START_DATE_DESC="[ES] Date and time the event begins. This is a mandatory field for display."
+COM_AUDATORIA_FIELD_END_DATE_LABEL="Fecha de Fin"
+COM_AUDATORIA_FIELD_END_DATE_DESC="[ES] Date and time the event ends (optional)."
+COM_AUDATORIA_FIELD_MEDIA_TYPE_LABEL="Tipo de Medio"
+COM_AUDATORIA_FIELD_MEDIA_TYPE_DESC="[ES] Select the type of media to display for this item."
+COM_AUDATORIA_FIELD_MEDIA_URL_LABEL="URL del Medio"
+COM_AUDATORIA_FIELD_MEDIA_URL_DESC="[ES] Full URL of the media (e.g., image, YouTube video, MP4 link)."
+COM_AUDATORIA_FIELD_MEDIA_CAPTION_LABEL="Leyenda del Medio"
+COM_AUDATORIA_FIELD_MEDIA_CAPTION_DESC="[ES] A brief descriptive text for the media."
+COM_AUDATORIA_FIELD_MEDIA_CREDIT_LABEL="Crédito del Medio"
+COM_AUDATORIA_FIELD_MEDIA_CREDIT_DESC="[ES] Source or author of the media."
+COM_AUDATORIA_FIELD_LOCATION_NAME_LABEL="Nombre de Ubicación"
+COM_AUDATORIA_FIELD_LOCATION_NAME_DESC="[ES] Descriptive name of the event's location (e.g., 'Eiffel Tower, Paris')."
+COM_AUDATORIA_FIELD_LAT_LABEL="Latitud"
+COM_AUDATORIA_FIELD_LAT_DESC="[ES] Latitude coordinate (e.g., 48.8584)."
+COM_AUDATORIA_FIELD_LNG_LABEL="Longitud"
+COM_AUDATORIA_FIELD_LNG_DESC="[ES] Longitude coordinate (e.g., 2.2945)."
 COM_AUDATORIA_SELECT_TIMELINE_PLACEHOLDER="-- Seleccionar Línea de Tiempo --"
-COM_AUDATORIA_TIMELINE_NOT_AVAILABLE="La línea de tiempo solicitada no está disponible."
-COM_AUDATORIA_ERROR_TIMELINEJS_NOT_LOADED="Error: TimelineJS no se pudo cargar. Por favor, revisa la consola del navegador."
-COM_AUDATORIA_NO_EVENTS_TO_DISPLAY="No hay eventos para mostrar en esta línea de tiempo."
-COM_AUDATORIA_FIELD_LOCATION_NAME="Ubicación"
-COM_AUDATORIA_ERROR_TIMELINE_NOT_FOUND="Error: La línea de tiempo no se encontró."
-COM_AUDATORIA_ERROR_MODEL_NOT_LOADED="Error: No se pudo cargar el modelo de datos."
-COM_AUDATORIA_CHANNEL_IMPORT_ACTION_FOR_ID="Acción de importación para el canal ID: %s"
-COM_AUDATORIA_ERROR_CHANNEL_ID_NOT_PROVIDED="Error: No se proporcionó ID de canal para la importación."
-COM_AUDATORIA_IMPORT_SUCCESS_COUNT="Importación exitosa. Se importaron %s videos."
-COM_AUDATORIA_IMPORT_FAILED="Falló la importación."
-COM_AUDATORIA_IMPORT_EXCEPTION="Excepción durante la importación."
-COM_AUDATORIA_ERROR_IMPORT_METHOD_NOT_FOUND="Error: Método de importación no encontrado en el modelo."
-COM_AUDATORIA_IMPORT_CLI_TRIGGERED="Script de importación CLI ejecutado. Salida:"
-COM_AUDATORIA_IMPORT_CLI_ERROR="Error al ejecutar script de importación CLI. Salida:"
+COM_AUDATORIA_UNTITLED_ITEM="[ES] Untitled Item"
+
+; Media Type Options
+COM_AUDATORIA_MEDIA_TYPE_TEXT="Solo Texto"
+COM_AUDATORIA_MEDIA_TYPE_IMAGE="Imagen"
+COM_AUDATORIA_MEDIA_TYPE_VIDEO="Video (MP4/WebM/Ogg)"
+COM_AUDATORIA_MEDIA_TYPE_YOUTUBE="YouTube"
+COM_AUDATORIA_MEDIA_TYPE_VIMEO="Vimeo"
+COM_AUDATORIA_MEDIA_TYPE_SOUNDCLOUD="SoundCloud"
+COM_AUDATORIA_MEDIA_TYPE_EMBED="Embebido (Iframe)"
+COM_AUDATORIA_MEDIA_TYPE_SOCIAL="Publicación de Red Social"
+
+; Channel Specific Fields & Fieldsets
+COM_AUDATORIA_FIELDSET_BASIC_CHANNEL_LABEL="Detalles del Canal"
+COM_AUDATORIA_FIELD_CHANNEL_ID_LABEL="ID del Canal"
+COM_AUDATORIA_FIELD_CHANNEL_ID_DESC="[ES] The unique ID of the YouTube channel (e.g., UCxxxxxxxxxxxxxxx) or other platform identifier."
+COM_AUDATORIA_FIELD_CHANNEL_TITLE_DESC="[ES] A friendly name for this channel (optional, will be fetched if possible)."
+COM_AUDATORIA_FIELD_CHANNEL_TIMELINE_ID_DESC="[ES] Timeline where items from this channel will be imported."
+COM_AUDATORIA_FIELD_CHANNEL_PLATFORM_LABEL="Plataforma"
+COM_AUDATORIA_FIELD_CHANNEL_PLATFORM_DESC="[ES] Select the social media or video platform for this channel."
+COM_AUDATORIA_PLATFORM_YOUTUBE="YouTube"
+COM_AUDATORIA_PLATFORM_TWITTER="Twitter / X"
+COM_AUDATORIA_PLATFORM_INSTAGRAM="Instagram"
+COM_AUDATORIA_FIELD_ENABLED_LABEL="Habilitar Importación"
+COM_AUDATORIA_FIELD_ENABLED_LABEL_COLUMN="Importación Habilitada"
+COM_AUDATORIA_FIELD_ENABLED_DESC="[ES] If enabled, this channel will be included in automatic/manual imports."
+COM_AUDATORIA_FIELD_LAST_CHECKED_LABEL="Última Verificación de Importación"
+COM_AUDATORIA_NEVER_CHECKED="Nunca"
+
+; Sort Order Texts
+COM_AUDATORIA_FIELD_CHANNEL_ID_LABEL_ASC="[ES] Channel ID ASC"
+COM_AUDATORIA_FIELD_CHANNEL_ID_LABEL_DESC="[ES] Channel ID DESC"
+COM_AUDATORIA_FIELD_LAST_CHECKED_ASC="[ES] Last Checked ASC"
+COM_AUDATORIA_FIELD_LAST_CHECKED_DESC="[ES] Last Checked DESC"
+COM_AUDATORIA_TIMELINE_ASC="[ES] Timeline ASC"
+COM_AUDATORIA_TIMELINE_DESC="[ES] Timeline DESC"
+COM_AUDATORIA_FIELD_START_DATE_ASC="[ES] Start Date ASC"
+COM_AUDATORIA_FIELD_START_DATE_DESC="[ES] Start Date DESC"
+
+; Toolbar Buttons and Actions
+COM_AUDATORIA_TOOLBAR_ENABLE_IMPORT="Habilitar Importación"
+COM_AUDATORIA_TOOLBAR_DISABLE_IMPORT="Deshabilitar Importación"
+COM_AUDATORIA_CHANNELS_IMPORT_VIDEOS_SELECTED="Importar Canales Seleccionados"
+COM_AUDATORIA_CHANNELS_IMPORT_VIDEOS_SINGLE="Importar Desde Este Canal"
+
+; Messages and Errors
+COM_AUDATORIA_MSG_SAVE_SUCCESS="Ítem guardado correctamente."
+COM_AUDATORIA_MSG_SAVE_ERROR="Error: No se pudo guardar el ítem."
+COM_AUDATORIA_MSG_DELETE_SUCCESS="Ítem(s) eliminado(s) correctamente."
+COM_AUDATORIA_MSG_DELETE_ERROR="Error: No se pudo(pudieron) eliminar el(los) ítem(s)."
+COM_AUDATORIA_MSG_PUBLISH_SUCCESS="Ítem(s) publicado(s) correctamente."
+COM_AUDATORIA_MSG_UNPUBLISH_SUCCESS="Ítem(s) despublicado(s) correctamente."
+COM_AUDATORIA_MSG_ARCHIVE_SUCCESS="Ítem(s) archivado(s) correctamente."
+COM_AUDATORIA_MSG_TRASH_SUCCESS="Ítem(s) enviado(s) a la papelera correctamente."
+COM_AUDATORIA_MSG_CHECKIN_SUCCESS="Ítem(s) registrado(s) (check-in) correctamente."
+COM_AUDATORIA_MSG_ORDERING_SUCCESS="Orden guardado correctamente."
+COM_AUDATORIA_MSG_CHANNEL_ENABLED_SUCCESS="Canal(es) habilitado(s) para importación."
+COM_AUDATORIA_MSG_CHANNEL_DISABLED_SUCCESS="Canal(es) deshabilitado(s) para importación."
+COM_AUDATORIA_N_CHANNELS_ENABLED="%s canal(es) habilitado(s) para importación."
+COM_AUDATORIA_N_CHANNELS_DISABLED="%s canal(es) deshabilitado(s) para importación."
+
+COM_AUDATORIA_CONFIRM_DELETE_TIMELINES_MSG="[ES] Are you sure you want to delete the selected timelines? All their items will also be deleted."
+COM_AUDATORIA_CONFIRM_DELETE_ITEMS_MSG="[ES] Are you sure you want to delete the selected items?"
+COM_AUDATORIA_CONFIRM_DELETE_CHANNELS_MSG="[ES] Are you sure you want to delete the selected channels?"
+
+COM_AUDATORIA_ERROR_FORM_NOT_LOADED="Error: No se pudo cargar el formulario solicitado."
+COM_AUDATORIA_ERROR_TIMELINE_NOT_FOUND_ADMIN="Error: Línea de tiempo no encontrada o no tienes permiso para verla."
+COM_AUDATORIA_ERROR_ITEM_NOT_FOUND_ADMIN="Error: Ítem no encontrado o no tienes permiso para verlo."
+COM_AUDATORIA_ERROR_CHANNEL_NOT_FOUND_ADMIN="Error: Canal no encontrado o no tienes permiso para verlo."
+COM_AUDATORIA_ERROR_UNEXPECTED_ADMIN="[ES] An unexpected error occurred. Please check the logs or contact the administrator."
+COM_AUDATORIA_ERROR_ITEM_TITLE_REQUIRED="El título del ítem es obligatorio."
+COM_AUDATORIA_ERROR_END_DATE_BEFORE_START_DATE="[ES] The end date cannot be earlier than the start date."
+COM_AUDATORIA_ERROR_ITEM_TIMELINE_ID_REQUIRED="[ES] You must select an Associated Timeline for the item."
+COM_AUDATORIA_ERROR_CHANNEL_ID_REQUIRED="El ID del Canal es obligatorio."
+COM_AUDATORIA_ERROR_CHANNEL_PLATFORM_REQUIRED="La Plataforma del Canal es obligatoria."
+COM_AUDATORIA_ERROR_CHANNEL_TIMELINE_ID_REQUIRED="[ES] You must select an Associated Timeline for the channel."
+COM_AUDATORIA_ERROR_CHANNEL_ID_DUPLICATE_FOR_TIMELINE="[ES] This Channel ID is already assigned to this Timeline for the selected platform."
+COM_AUDATORIA_ERROR_NO_CHANNELS_SELECTED_FOR_IMPORT="[ES] Please select at least one channel to import."
+COM_AUDATORIA_IMPORT_CLI_TRIGGERED_FOR_CHANNEL="[ES] Background import initiated for channel ID %s. Check server logs or system messages for details."
+COM_AUDATORIA_IMPORT_CLI_ERROR_FOR_CHANNEL="[ES] Error initiating background import for channel ID %s. Check server logs."
+COM_AUDATORIA_ERROR_CLI_SCRIPT_NOT_FOUND_OR_PHP_NOT_EXECUTABLE="[ES] Error: Background import script not found or PHP is not configured/executable. Contact administrator. (PHP: %s, Script: %s)"
+
+
+; Statuses
+COM_AUDATORIA_ENABLED="Habilitado"
+COM_AUDATORIA_DISABLED="Deshabilitado"
+
+; Filters and Lists
+COM_AUDATORIA_FILTER_SEARCH_LABEL="Buscar"
+COM_AUDATORIA_FILTER_SEARCH_DESC="[ES] Search by title, alias, or description."
+COM_AUDATORIA_FILTER_SEARCH_CHANNEL_DESC="[ES] Search by channel title or channel ID."
+COM_AUDATORIA_FILTER_SEARCH_CHANNEL_HINT="[ES] Search channel title or ID..."
+COM_AUDATORIA_FILTER_TIMELINE_LABEL="Filtrar por Línea de Tiempo"
+COM_AUDATORIA_FILTER_SELECT_TIMELINE="-- Seleccionar Línea de Tiempo --"
+COM_AUDATORIA_FILTER_STATE_LABEL="Filtrar por Estado"
+COM_AUDATORIA_FILTER_STATE_DESC="[ES] Filter items by their status."
+COM_AUDATORIA_FILTER_CHANNEL_STATE_DESC="[ES] Filter channels by their import enabled status."
+COM_AUDATORIA_FILTER_SELECT_STATE="-- Seleccionar Estado --"
+COM_AUDATORIA_FILTER_PLATFORM_LABEL="Filtrar por Plataforma"
+COM_AUDATORIA_FILTER_SELECT_PLATFORM="-- Seleccionar Plataforma --"
+
+; Empty state messages
+COM_AUDATORIA_TIMELINES_NO_TIMELINES="No se encontraron Líneas de Tiempo. Haz clic en 'Nuevo' para crear una."
+COM_AUDATORIA_ITEMS_NO_ITEMS="No se encontraron Ítems para los filtros actuales. Intenta ajustar los filtros o haz clic en 'Nuevo' para añadir un ítem."
+COM_AUDATORIA_CHANNELS_NO_CHANNELS="No hay Canales configurados. Haz clic en 'Nuevo' para añadir un canal para importar."
+
+; Component Configuration
+COM_AUDATORIA_CONFIG_FIELDSET_LABEL="[ES] Audatoria General Configuration"
+COM_AUDATORIA_CONFIG_MAPS_API_KEY_LABEL="[ES] Google Maps API Key (Optional)"
+COM_AUDATORIA_CONFIG_MAPS_API_KEY_DESC="[ES] Enter your Google Maps API Key if you prefer Google Maps for TimelineJS (default is OpenStreetMap) and have set up TimelineJS accordingly. Often not needed for basic TimelineJS."
+COM_AUDATORIA_CONFIG_YOUTUBE_API_KEY_LABEL="[ES] YouTube Data API v3 Key"
+COM_AUDATORIA_CONFIG_YOUTUBE_API_KEY_DESC="[ES] Required for importing videos from YouTube. Ensure 'YouTube Data API v3' is enabled in your Google Cloud project."
+COM_AUDATORIA_CONFIG_YOUTUBE_API_KEY_REQUIRED_MSG="[ES] YouTube API Key is required for YouTube video import functionality."
+COM_AUDATORIA_CONFIG_AUTO_PUBLISH_IMPORTED_LABEL="[ES] Automatically Publish Imported Items?"
+COM_AUDATORIA_CONFIG_AUTO_PUBLISH_IMPORTED_DESC="[ES] If set to 'Yes', items imported from external sources (like YouTube) will be automatically published. Otherwise, they will be unpublished."
+COM_AUDATORIA_CONFIG_IMPORT_MAX_PAGES_LABEL="[ES] Import: Max Video Pages (YouTube)"
+COM_AUDATORIA_CONFIG_IMPORT_MAX_PAGES_DESC="[ES] Maximum number of video pages (sets of results) to fetch from YouTube API for each channel during one import. Helps prevent excessive API usage. Each page typically contains multiple videos."
+COM_AUDATORIA_CONFIG_IMPORT_VIDEOS_PER_PAGE_LABEL="[ES] Import: Videos Per Page (YouTube)"
+COM_AUDATORIA_CONFIG_IMPORT_VIDEOS_PER_PAGE_DESC="[ES] Number of videos to request per YouTube API call (max 50). Higher values use fewer API calls but more memory."
+COM_AUDATORIA_CONFIG_PHP_PATH_LABEL="[ES] PHP Executable Path (Optional)"
+COM_AUDATORIA_CONFIG_PHP_PATH_DESC="[ES] Full path to the PHP executable (e.g., /usr/bin/php). Only needed if the system cannot find PHP automatically for background import tasks."
+
+; CLI Youtube Import
+COM_AUDATORIA_ERROR_YOUTUBE_API_KEY_NOT_CONFIGURED_CLI="[ES] CLI Error: YouTube API Key is not configured in the Audatoria component parameters."
+COM_AUDATORIA_IMPORT_CLI_STARTED="[ES] CLI: Starting YouTube video import..."
+COM_AUDATORIA_IMPORT_CLI_SPECIFIC_CHANNEL_TIMELINE="[ES] CLI: Processing only YouTube channel ID '%s' for timeline ID %s."
+COM_AUDATORIA_IMPORT_CLI_SPECIFIC_CHANNEL_ONLY_WARNING="[ES] CLI WARNING: --channel_id (%s) was provided but not --timeline_id. Specific import will be skipped. To import a specific channel, you must also provide the associated timeline ID."
+COM_AUDATORIA_IMPORT_CLI_DB_ERROR_CHANNELS="[ES] CLI DB Error: Could not retrieve channels from the database. %s"
+COM_AUDATORIA_IMPORT_CLI_NO_CHANNELS_ENABLED="[ES] CLI: No channels are enabled for import or match the given parameters."
+COM_AUDATORIA_IMPORT_CLI_PROCESSING_CHANNEL="[ES] CLI: Processing channel '%s' (YouTube ID: %s)..."
+COM_AUDATORIA_IMPORT_CLI_MAX_PAGES_REACHED="[ES] CLI: Reached maximum of %d pages to process for channel '%s'."
+COM_AUDATORIA_IMPORT_CLI_FETCHING_PAGE="[ES] CLI: Querying YouTube API: Page %d for channel '%s'."
+COM_AUDATORIA_IMPORT_CLI_YOUTUBE_API_ERROR="[ES] CLI YouTube API Error (code: %s) for channel '%s'. Response: %s"
+COM_AUDATORIA_IMPORT_CLI_YOUTUBE_API_ERROR_LOG="[ES] CLI YouTube API Error (code: %s) for channel '%s' (YouTube ID: %s). Response body: %s"
+COM_AUDATORIA_IMPORT_CLI_JSON_DECODE_ERROR="[ES] CLI Error decoding JSON for channel '%s': %s"
+COM_AUDATORIA_IMPORT_CLI_JSON_DECODE_ERROR_LOG="[ES] CLI Error decoding JSON for channel '%s': %s. Response body: %s"
+COM_AUDATORIA_IMPORT_CLI_NO_NEW_VIDEOS_PAGE="[ES] CLI: No new videos found on page %d for channel '%s'."
+COM_AUDATORIA_IMPORT_CLI_MALFORMED_VIDEO_ITEM="[ES] CLI: Malformed video item from API, skipping."
+COM_AUDATORIA_IMPORT_CLI_VIDEO_EXISTS="[ES] CLI: Video '%s' (ID: %s) already exists in this timeline. Skipping."
+COM_AUDATORIA_IMPORT_CLI_INVALID_PUBLISH_DATE="[ES] CLI WARNING: Invalid publish date for video ID %s ('%s'). Error: %s. Using current date as fallback."
+COM_AUDATORIA_IMPORT_CLI_VIDEO_IMPORTED="[ES] CLI: Video '%s' (ID: %s) imported successfully to timeline ID %s."
+COM_AUDATORIA_IMPORT_CLI_DB_INSERT_ERROR="[ES] CLI DB Error: Could not insert video '%s' (ID: %s). %s"
+COM_AUDATORIA_IMPORT_CLI_DB_INSERT_ERROR_LOG="[ES] CLI DB Error inserting video '%s' (YouTube ID: %s). Error: %s"
+COM_AUDATORIA_IMPORT_CLI_DB_INSERT_EXCEPTION="[ES] CLI DB Exception: Inserting video '%s' (ID: %s). %s"
+COM_AUDATORIA_IMPORT_CLI_DB_INSERT_EXCEPTION_LOG="[ES] CLI DB Exception inserting video '%s' (YouTube ID: %s). Exception: %s"
+COM_AUDATORIA_IMPORT_CLI_GENERAL_API_EXCEPTION="[ES] CLI General exception during request/processing for channel '%s': %s"
+COM_AUDATORIA_IMPORT_CLI_GENERAL_API_EXCEPTION_LOG="[ES] CLI General exception for channel '%s': %s. Trace: %s"
+COM_AUDATORIA_IMPORT_CLI_NO_NEW_VIDEOS_PROCESSED_FIRST_PAGE="[ES] CLI: No new videos were processed for channel '%s' on the first page (they might all exist or be invalid)."
+COM_AUDATORIA_IMPORT_CLI_DB_UPDATE_LAST_CHECKED_ERROR="[ES] CLI DB Error: Could not update 'last_checked' for channel '%s'. %s"
+COM_AUDATORIA_IMPORT_CLI_DB_UPDATE_LAST_CHECKED_ERROR_LOG="[ES] CLI DB Error updating 'last_checked' for channel '%s'. Error: %s"
+COM_AUDATORIA_IMPORT_CLI_CHANNEL_COMPLETE="[ES] CLI: Import completed for channel: '%s'. New videos processed: %d."
+COM_AUDATORIA_IMPORT_CLI_FINISHED="[ES] CLI: YouTube import process finished."
+
+; Custom Icons
+COM_AUDATORIA_ICON_TIMELINE="[ES] Timeline"
+COM_AUDATORIA_ICON_ITEM="[ES] Item"
+COM_AUDATORIA_ICON_CHANNEL="[ES] Channel"
+COM_AUDATORIA_ICON_DASHBOARD="[ES] Dashboard"
