--- a/administrator/language/es-ES/es-ES.com_audatoria.sys.ini
+++ b/administrator/language/es-ES/es-ES.com_audatoria.sys.ini
@@ -1,2 +1,57 @@
+; Joomla! Archivo de Idioma del Sistema para com_audatoria (Administrador)
+; Copyright (C) 2025 Joel Salazar. Todos los derechos reservados.
+; Licencia GNU General Public License version 2 o posterior; ver LICENSE.txt
+; Nota: Todos los archivos ini deben guardarse como UTF-8
+
 COM_AUDATORIA="Audatoria"
-COM_AUDATORIA_XML_DESCRIPTION="Componente para crear líneas de tiempo multimedia con videos, imágenes, ubicación geográfica y YouTube."
+COM_AUDATORIA_XML_DESCRIPTION="Componente para crear y gestionar líneas de tiempo multimedia interactivas, con importación desde YouTube, redes sociales y otras fuentes. Permite la creación manual de ítems y presenta vistas de línea de tiempo responsivas."
+
+; Menú Principal de Administración
+COM_AUDATORIA_MENU_ADMIN="Líneas de Tiempo (Audatoria)"
+
+; Submenús de Administración (como se define en audatoria.xml)
+COM_AUDATORIA_SUBMENU_TIMELINES="Líneas de Tiempo"
+COM_AUDATORIA_SUBMENU_ITEMS="Ítems de Línea de Tiempo"
+COM_AUDATORIA_SUBMENU_CHANNELS="Canales de Importación"
+COM_AUDATORIA_SUBMENU_DASHBOARD="Panel de Control" ; Opcional, si tienes una vista de dashboard
+
+; Permisos (access.xml) - Asegúrate que estas claves coincidan con tu access.xml
+; Sección del Componente
+; COM_AUDATORIA_ACCESS_ADMIN_LABEL="Configurar ACL y Opciones"
+; COM_AUDATORIA_ACCESS_ADMIN_DESC="Permite a los usuarios editar las opciones y permisos de este componente."
+
+; Sección Timeline
+COM_AUDATORIA_ACCESS_CREATE_TIMELINE_LABEL="Crear Líneas de Tiempo"
+COM_AUDATORIA_ACCESS_CREATE_TIMELINE_DESC="Permite a los usuarios de este grupo crear nuevas líneas de tiempo."
+COM_AUDATORIA_ACCESS_DELETE_TIMELINE_LABEL="Eliminar Líneas de Tiempo"
+COM_AUDATORIA_ACCESS_DELETE_TIMELINE_DESC="Permite a los usuarios de este grupo eliminar sus propias líneas de tiempo o todas, según la configuración de ACL."
+COM_AUDATORIA_ACCESS_EDIT_TIMELINE_LABEL="Editar Líneas de Tiempo"
+COM_AUDATORIA_ACCESS_EDIT_TIMELINE_DESC="Permite a los usuarios de este grupo editar sus propias líneas de tiempo o todas."
+COM_AUDATORIA_ACCESS_EDITSTATE_TIMELINE_LABEL="Editar Estado de Línea de Tiempo"
+COM_AUDATORIA_ACCESS_EDITSTATE_TIMELINE_DESC="Permite a los usuarios de este grupo publicar, despublicar, archivar o enviar a la papelera líneas de tiempo."
+COM_AUDATORIA_ACCESS_EDITOWN_TIMELINE_LABEL="Editar Propias Líneas de Tiempo"
+COM_AUDATORIA_ACCESS_EDITOWN_TIMELINE_DESC="Permite a los usuarios de este grupo editar solo las líneas de tiempo que han creado."
+
+; Sección Item
+COM_AUDATORIA_ACCESS_CREATE_ITEM_LABEL="Crear Ítems"
+COM_AUDATORIA_ACCESS_CREATE_ITEM_DESC="Permite a los usuarios de este grupo crear nuevos ítems en las líneas de tiempo."
+COM_AUDATORIA_ACCESS_DELETE_ITEM_LABEL="Eliminar Ítems"
+COM_AUDATORIA_ACCESS_DELETE_ITEM_DESC="Permite a los usuarios de este grupo eliminar ítems."
+COM_AUDATORIA_ACCESS_EDIT_ITEM_LABEL="Editar Ítems"
+COM_AUDATORIA_ACCESS_EDIT_ITEM_DESC="Permite a los usuarios de este grupo editar ítems."
+COM_AUDATORIA_ACCESS_EDITSTATE_ITEM_LABEL="Editar Estado de Ítem"
+COM_AUDATORIA_ACCESS_EDITSTATE_ITEM_DESC="Permite a los usuarios de este grupo cambiar el estado de publicación de los ítems."
+COM_AUDATORIA_ACCESS_EDITOWN_ITEM_LABEL="Editar Propios Ítems"
+COM_AUDATORIA_ACCESS_EDITOWN_ITEM_DESC="Permite a los usuarios de este grupo editar solo los ítems que han creado."
+
+; Sección Channel
+COM_AUDATORIA_ACCESS_CREATE_CHANNEL_LABEL="Crear Canales"
+COM_AUDATORIA_ACCESS_CREATE_CHANNEL_DESC="Permite a los usuarios de este grupo configurar nuevos canales de YouTube para importación."
+COM_AUDATORIA_ACCESS_DELETE_CHANNEL_LABEL="Eliminar Canales"
+COM_AUDATORIA_ACCESS_DELETE_CHANNEL_DESC="Permite a los usuarios de este grupo eliminar canales de YouTube configurados."
+COM_AUDATORIA_ACCESS_EDIT_CHANNEL_LABEL="Editar Canales"
+COM_AUDATORIA_ACCESS_EDIT_CHANNEL_DESC="Permite a los usuarios de este grupo editar canales de YouTube configurados."
+COM_AUDATORIA_ACCESS_EDITSTATE_CHANNEL_LABEL="Editar Estado de Canal (Habilitar/Deshabilitar)"
+COM_AUDATORIA_ACCESS_EDITSTATE_CHANNEL_DESC="Permite a los usuarios de este grupo habilitar o deshabilitar canales de YouTube para importación."
+COM_AUDATORIA_ACCESS_IMPORT_CHANNEL_LABEL="Importar Videos de Canales"
+COM_AUDATORIA_ACCESS_IMPORT_CHANNEL_DESC="Permite a los usuarios de este grupo ejecutar importaciones de video desde canales de YouTube configurados."
