--- a/site/language/es-ES/es-ES.com_audatoria.sys.ini
+++ b/site/language/es-ES/es-ES.com_audatoria.sys.ini
@@ -1,2 +1,9 @@
-COM_AUDATORIA="Audatoria"
-COM_AUDATORIA_XML_DESCRIPTION="Componente para crear líneas de tiempo multimedia con videos, imágenes, ubicación geográfica y YouTube."
+; Joomla! Archivo de Idioma del Sistema para com_audatoria (Sitio)
+; Copyright (C) 2025 Joel Salazar. Todos los derechos reserved.
+; Licencia GNU General Public License version 2 o posterior; ver LICENSE.txt
+
+COM_AUDATORIA="Líneas de Tiempo (Audatoria)"
+COM_AUDATORIA_XML_DESCRIPTION="Componente para mostrar líneas de tiempo multimedia interactivas."
+; Puedes añadir aquí constantes para los títulos de las vistas del frontend si las usas en la creación de ítems de menú
+COM_AUDATORIA_TIMELINE_VIEW_DEFAULT_TITLE="Vista de Línea de Tiempo"
+COM_AUDATORIA_TIMELINES_LIST_VIEW_DEFAULT_TITLE="Lista de Líneas de Tiempo" ; Si tienes una vista de lista de timelines
