--- a/site/language/es-ES/es-ES.com_audatoria.ini
+++ b/site/language/es-ES/es-ES.com_audatoria.ini
@@ -1,41 +1,24 @@
-COM_AUDATORIA="Audatoria"
-COM_AUDATORIA_TIMELINE="Línea de tiempo"
-COM_AUDATORIA_ITEM="Ítem"
-COM_AUDATORIA_CHANNEL="Canal de YouTube"
-COM_AUDATORIA_IMPORT="Importar"
-COM_AUDATORIA_FIELD_TITLE="Título"
-COM_AUDATORIA_FIELD_DESCRIPTION="Descripción"
-COM_AUDATORIA_FIELD_START_DATE="Fecha de inicio"
-COM_AUDATORIA_FIELD_END_DATE="Fecha final"
-COM_AUDATORIA_FIELD_MEDIA_TYPE="Tipo de medio"
-COM_AUDATORIA_FIELD_MEDIA_URL="URL del medio"
-COM_AUDATORIA_FIELD_LOCATION_NAME="Ubicación"
-COM_AUDATORIA_FIELD_LAT="Latitud"
-COM_AUDATORIA_FIELD_LNG="Longitud"
-COM_AUDATORIA_FIELD_PUBLISHED="Publicado"
-COM_AUDATORIA_EDIT="Editar"
-COM_AUDATORIA_CHANNELS_IMPORT_VIDEOS="Importar videos"
-COM_AUDATORIA_CHANNELS_HEADING="Canales de YouTube"
-COM_AUDATORIA_CHANNELS_ADD_NEW="Nuevo canal"
-COM_AUDATORIA_CHANNELS_NO_CHANNELS="No hay canales configurados."
-COM_AUDATORIA_TIMELINES_HEADING="Líneas de tiempo"
-COM_AUDATORIA_TIMELINES_ADD_NEW="Nueva línea"
-COM_AUDATORIA_TIMELINES_NO_TIMELINES="No hay líneas creadas aún."
-COM_AUDATORIA_ITEMS_HEADING="Ítems"
-COM_AUDATORIA_ITEMS_ADD_NEW="Nuevo ítem"
-COM_AUDATORIA_ITEMS_NO_ITEMS="No hay ítems registrados."
-COM_AUDATORIA_SELECT_TIMELINE_PLACEHOLDER="-- Seleccionar Línea de Tiempo --"
-COM_AUDATORIA_TIMELINE_NOT_AVAILABLE="La línea de tiempo solicitada no está disponible."
-COM_AUDATORIA_ERROR_TIMELINEJS_NOT_LOADED="Error: TimelineJS no se pudo cargar. Por favor, revisa la consola del navegador."
-COM_AUDATORIA_NO_EVENTS_TO_DISPLAY="No hay eventos para mostrar en esta línea de tiempo."
-COM_AUDATORIA_FIELD_LOCATION_NAME="Ubicación"
-COM_AUDATORIA_ERROR_TIMELINE_NOT_FOUND="Error: La línea de tiempo no se encontró."
-COM_AUDATORIA_ERROR_MODEL_NOT_LOADED="Error: No se pudo cargar el modelo de datos."
-COM_AUDATORIA_CHANNEL_IMPORT_ACTION_FOR_ID="Acción de importación para el canal ID: %s"
-COM_AUDATORIA_ERROR_CHANNEL_ID_NOT_PROVIDED="Error: No se proporcionó ID de canal para la importación."
-COM_AUDATORIA_IMPORT_SUCCESS_COUNT="Importación exitosa. Se importaron %s videos."
-COM_AUDATORIA_IMPORT_FAILED="Falló la importación."
-COM_AUDATORIA_IMPORT_EXCEPTION="Excepción durante la importación."
-COM_AUDATORIA_ERROR_IMPORT_METHOD_NOT_FOUND="Error: Método de importación no encontrado en el modelo."
-COM_AUDATORIA_IMPORT_CLI_TRIGGERED="Script de importación CLI ejecutado. Salida:"
-COM_AUDATORIA_IMPORT_CLI_ERROR="Error al ejecutar script de importación CLI. Salida:"
+; Joomla! Archivo de Idioma Principal para com_audatoria (Sitio)
+; Copyright (C) 2025 Joel Salazar. Todos los derechos reservados.
+; Licencia GNU General Public License version 2 o posterior; ver LICENSE.txt
+
+COM_AUDATORIA="Líneas de Tiempo (Audatoria)"
+
+; Vista de Línea de Tiempo (default.php)
+COM_AUDATORIA_TIMELINE_NOT_AVAILABLE="La línea de tiempo solicitada no está disponible o no tienes permiso para verla."
+COM_AUDATORIA_ERROR_TIMELINEJS_NOT_LOADED="Error: TimelineJS (la librería de la línea de tiempo) no pudo cargarse. Por favor, revisa la consola de tu navegador para más detalles."
+COM_AUDATORIA_ERROR_TIMELINEJS_INIT_FAILED="Error: No se pudo inicializar TimelineJS. Por favor, revisa la consola de tu navegador para más detalles."
+COM_AUDATORIA_NO_EVENTS_TO_DISPLAY="Actualmente no hay eventos para mostrar en esta línea de tiempo."
+COM_AUDATORIA_ENABLE_JAVASCRIPT="Por favor, habilita JavaScript para ver esta línea de tiempo interactiva."
+COM_AUDATORIA_TIMELINE_LOAD_ERROR="Ocurrió un error al cargar los datos de la línea de tiempo."
+COM_AUDATORIA_UNTITLED_ITEM="Evento sin Título"
+COM_AUDATORIA_LOCATION_LABEL="Ubicación: "
+
+; Posibles errores de la lógica modelo/vista en el frontend
+COM_AUDATORIA_ERROR_TIMELINE_ID_MISSING="Error: No se ha especificado una línea de tiempo para mostrar."
+COM_AUDATORIA_ERROR_TIMELINE_NOT_FOUND_OR_ACCESS_DENIED="Error: La línea de tiempo no se encontró, no está publicada o no tienes permiso para acceder a ella."
+COM_AUDATORIA_ERROR_MODEL_NOT_LOADED_FRONTEND="Error: No se pudieron cargar los datos necesarios para esta página. Por favor, inténtalo de nuevo más tarde."
+
+; Ejemplo para un formulario simple si añades uno al frontend (ej. en tmpl/site/default/default.php)
+COM_AUDATORIA_FIELD_LABEL="Campo de Ejemplo:"
+COM_AUDATORIA_SUBMIT_BUTTON="Enviar"
